@@ -312,8 +312,8 @@ static char *SplittimeHelp[] = {
 
 static char *SelectHelp[] = {
     "NAME",
-    "    selcode, delcode, selvar, delvar, selstdname, sellevel, selltype, selgrid, ",
-    "    selgridname, selzaxis, selzaxisname, seltabnum, selrec - Select fields",
+    "    selcode, delcode, selvar, delvar, selstdname, sellevel, selgrid, selgridname, ",
+    "    selzaxis, selzaxisname, selltype, seltabnum, selrec - Select fields",
     "",
     "SYNOPSIS",
     "    selcode,codes  ifile ofile",
@@ -322,11 +322,11 @@ static char *SelectHelp[] = {
     "    delvar,vars  ifile ofile",
     "    selstdname,stdnames  ifile ofile",
     "    sellevel,levels  ifile ofile",
-    "    selltype,ltypes  ifile ofile",
     "    selgrid,grids  ifile ofile",
     "    selgridname,gridnames  ifile ofile",
     "    selzaxis,zaxes  ifile ofile",
     "    selzaxisname,zaxisnames  ifile ofile",
+    "    selltype,ltypes  ifile ofile",
     "    seltabnum,tabnums  ifile ofile",
     "    selrec,records  ifile ofile",
     "",
@@ -347,8 +347,6 @@ static char *SelectHelp[] = {
     "                  Selects all fields with standard names in a user given list.",
     "    sellevel      Select levels",
     "                  Selects all fields with levels in a user given list.",
-    "    selltype      Select GRIB level types",
-    "                  Selects all fields with GRIB level type in a user given list.",
     "    selgrid       Select grids",
     "                  Selects all fields with grids in a user given list.",
     "    selgridname   Select grids by name",
@@ -357,6 +355,8 @@ static char *SelectHelp[] = {
     "                  Selects all fields with zaxes in a user given list.",
     "    selzaxisname  Select zaxes by name",
     "                  Selects all fields with zaxis names in a user given list.",
+    "    selltype      Select GRIB level types",
+    "                  Selects all fields with GRIB level type in a user given list.",
     "    seltabnum     Select parameter table numbers",
     "                  Selects all fields with parameter table numbers in a user given list.",
     "    selrec        Select records",
@@ -620,13 +620,14 @@ static char *CompcHelp[] = {
 
 static char *SetHelp[] = {
     "NAME",
-    "    setpartab, setcode, setvar, setlevel - Set field info",
+    "    setpartab, setcode, setvar, setlevel, setltype - Set field info",
     "",
     "SYNOPSIS",
     "    setpartab,table  ifile ofile",
     "    setcode,code  ifile ofile",
     "    setvar,name  ifile ofile",
     "    setlevel,level  ifile ofile",
+    "    setltype,ltype  ifile ofile",
     "",
     "DESCRIPTION",
     "    This module sets some field information. Depending on the actual",
@@ -642,12 +643,15 @@ static char *SetHelp[] = {
     "               Sets the name of the first variable.",
     "    setlevel   Set level",
     "               Sets the first level of all variables.",
+    "    setltype   Set GRIB level type",
+    "               Sets the GRIB level type of all variables.",
     "",
     "PARAMETER",
     "    table  STRING   Parameter table file or name",
     "    code   INTEGER  Code number",
     "    name   STRING   Variable name",
     "    level  FLOAT    New level",
+    "    ltype  INTEGER  GRIB level type",
     NULL
 };
 
